--- a/css/home.css
+++ b/css/home.css
@@ -13,7 +13,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/cover.jpg');
+  background-image: url('../img/home/cover_white.jpg');
   text-align: center;
   color: white;
 }
@@ -47,7 +47,7 @@ header .header-content {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 50px;
-  color:#444444;
+  color:#2C3E50;
 }
 
 .no-padding {
