--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,37 @@
   src: local('Noto Sans'), local('NotoSans'), url(http://themes.googleusercontent.com/static/fonts/notosans/v1/LeFlHvsZjXu2c3ZRgBq9nLO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
 }
 
-body {
-    padding-top:50px;
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+    font-size: 10px;
+
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+body {
+    margin: 0;
+    padding-top:50px;
+    font-family: "Noto Sans", "Helvetica Neue", Arial, sans-serif;
+    font-size: 14px;
+    color: #333;
+    background-color: #fff;
+}
+
+footer,
+header,
+menu,
+nav,
+section{
+  display: block;
+}
+
+video {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
 
 p {
     font-family: "Noto Sans"; 
@@ -54,13 +82,27 @@ p.switch {
   font-size: 24px;
   text-align: center;
 }
-
+a {
+  background-color: transparent;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+strong {
+  font-weight: bold;
+}
+img {
+  border: 0;
+}
 
 h1{
     text-transform: uppercase;
     font-family: "Noto Sans", Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 500;
     text-align: left;
+    margin: .67em 0;
+    font-size: 32px;
 }
 h4{
     text-transform: uppercase;
@@ -86,6 +128,13 @@ ul,li {
     text-align: left;
 }
 
+hr {
+  height: 0;
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
 hr.star-light{
     margin: 15px auto 30px;
     padding: 0;
@@ -107,6 +156,27 @@ hr.star-primary {
 
 .img-centered {
     margin: 0 auto;
+}
+
+a {
+  color: #337ab7;
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  color: #23527c;
+  text-decoration: underline;
+}
+a:focus {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+figure {
+  margin: 0;
+}
+img {
+  vertical-align: middle;
 }
 
 
