--- a/css/timeline.css
+++ b/css/timeline.css
@@ -167,38 +167,28 @@ header {
     header {
         min-height: 100%;
       }
+    /*relocate the gray line*/
     ul.timeline:before {
         left: 40px;
     }
-
-    ul.timeline > li > .timeline-panel {
-        width: calc(100% - 90px);
-        width: -moz-calc(100% - 90px);
-        width: -webkit-calc(100% - 90px);
-    }
-
+    
+    /* relocate the circle icon*/
     ul.timeline > li > .timeline-badge {
         left: 15px;
         margin-left: 0;
         top: 16px;
     }
 
+    /* adjust the panel size*/
+    ul.timeline > li > .timeline-panel {
+        width: calc(100% - 90px);
+        width: -moz-calc(100% - 90px);
+        width: -webkit-calc(100% - 90px);
+    }
+    
+    /*make sure all of the panel float to right*/
     ul.timeline > li > .timeline-panel {
         float: right;
     }
-
-        ul.timeline > li > .timeline-panel:before {
-            border-left-width: 0;
-            border-right-width: 15px;
-            left: -15px;
-            right: auto;
-        }
-
-        ul.timeline > li > .timeline-panel:after {
-            border-left-width: 0;
-            border-right-width: 14px;
-            left: -14px;
-            right: auto;
-        }
 }
     
